test/negative/metal_type_reflection/Main.hx
class Main {
	static function main() {
		trace(Type.getClassName(Main));
	}
}
